blender Crash when use Cycles to render Stereoscopy #58142

Closed
opened 2018-11-29 06:20:54 +01:00 by BenQi · 25 comments

System Information
Win10 X64 GTX1080Ti

Blender Version
Broken: 2.80 27cccaeccd 2018-11-29 01:24
Worked: (optional)

Short description of error
check stereoscopy , use cycles to render when the left eye view render done, bleder crash.
Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

**System Information** Win10 X64 GTX1080Ti **Blender Version** Broken: 2.80 27cccaeccd2 2018-11-29 01:24 Worked: (optional) **Short description of error** check stereoscopy , use cycles to render when the left eye view render done, bleder crash. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps
Author

Added subscriber: @qibentie

Added subscriber: @qibentie

#60740 was marked as duplicate of this issue

#60740 was marked as duplicate of this issue

#60494 was marked as duplicate of this issue

#60494 was marked as duplicate of this issue

#59079 was marked as duplicate of this issue

#59079 was marked as duplicate of this issue

#58519 was marked as duplicate of this issue

#58519 was marked as duplicate of this issue

#58453 was marked as duplicate of this issue

#58453 was marked as duplicate of this issue
Author
[untitled.blend](https://archive.blender.org/developer/F5753375/untitled.blend)
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2018-11-29 13:12:59 +01:00
Member

Seems RenderEngine->depsgrah is NULL here getting the evaluated camera.

1  DEG::Depsgraph::find_id_node         depsgraph.cc        333   0x2f10b28      
2  DEG_get_evaluated_id                 depsgraph_query.cc  172   0x2f1761d      
3  DEG_get_evaluated_object             depsgraph_query.cc  159   0x2f175e2      
4  rna_RenderEngine_camera_override_get rna_render.c        391   0x2dacbc1      
5  RenderEngine_camera_override_get     rna_render_gen.c    364   0x2dad148      
6  BL::RenderEngine::camera_override    RNA_blender_cpp.h   50232 0x32ac7f5      
7  ccl::BlenderSession::render          blender_session.cpp 463   0x32a71fa      
8  ccl::render_func                     blender_python.cpp  280   0x32a108c      
9  _PyMethodDef_RawFastCallKeywords                               0x7ffff79c4957 
10 _PyCFunction_FastCallKeywords                                  0x7ffff79c4bf0 
11 _PyEval_EvalFrameDefault                                       0x7ffff7a39c60 
12 _PyFunction_FastCallKeywords                                   0x7ffff79c41ca 
13 _PyEval_EvalFrameDefault                                       0x7ffff7a3951e 
14 _PyFunction_FastCallDict                                       0x7ffff797e12a 
15 bpy_class_call                       bpy_rna.c           7940  0x2333c83      
16 engine_render                        rna_render.c        183   0x2dac28d      
17 RE_engine_render                     external_engine.c   739   0x22fdf1d      
18 do_render_3d                         pipeline.c          1101  0x230585c      
19 do_render                            pipeline.c          1177  0x2305b70      
20 do_render_composite                  pipeline.c          1392  0x2306379      
21 do_render_all_options                pipeline.c          1659  0x2306fc8      
22 RE_BlenderFrame                      pipeline.c          2013  0x2307ec9      
23 render_startjob                      render_internal.c   622   0x2211008  

@Sergey: one for you?

Seems RenderEngine->depsgrah is NULL here getting the evaluated camera. ``` 1 DEG::Depsgraph::find_id_node depsgraph.cc 333 0x2f10b28 2 DEG_get_evaluated_id depsgraph_query.cc 172 0x2f1761d 3 DEG_get_evaluated_object depsgraph_query.cc 159 0x2f175e2 4 rna_RenderEngine_camera_override_get rna_render.c 391 0x2dacbc1 5 RenderEngine_camera_override_get rna_render_gen.c 364 0x2dad148 6 BL::RenderEngine::camera_override RNA_blender_cpp.h 50232 0x32ac7f5 7 ccl::BlenderSession::render blender_session.cpp 463 0x32a71fa 8 ccl::render_func blender_python.cpp 280 0x32a108c 9 _PyMethodDef_RawFastCallKeywords 0x7ffff79c4957 10 _PyCFunction_FastCallKeywords 0x7ffff79c4bf0 11 _PyEval_EvalFrameDefault 0x7ffff7a39c60 12 _PyFunction_FastCallKeywords 0x7ffff79c41ca 13 _PyEval_EvalFrameDefault 0x7ffff7a3951e 14 _PyFunction_FastCallDict 0x7ffff797e12a 15 bpy_class_call bpy_rna.c 7940 0x2333c83 16 engine_render rna_render.c 183 0x2dac28d 17 RE_engine_render external_engine.c 739 0x22fdf1d 18 do_render_3d pipeline.c 1101 0x230585c 19 do_render pipeline.c 1177 0x2305b70 20 do_render_composite pipeline.c 1392 0x2306379 21 do_render_all_options pipeline.c 1659 0x2306fc8 22 RE_BlenderFrame pipeline.c 2013 0x2307ec9 23 render_startjob render_internal.c 622 0x2211008 ``` @Sergey: one for you?

Added subscriber: @JorgeFrias

Added subscriber: @JorgeFrias

Added subscriber: @IRIEShinsuke

Added subscriber: @IRIEShinsuke
Member

Added subscribers: @EXoloN, @sebastian_k

Added subscribers: @EXoloN, @sebastian_k

Added subscriber: @SimeonConzendorf

Added subscriber: @SimeonConzendorf

Added subscriber: @fladen

Added subscriber: @fladen

Added subscriber: @Aroidzap

Added subscriber: @Aroidzap

This comment was removed by @fladen

*This comment was removed by @fladen*

This comment was removed by @Sergey

*This comment was removed by @Sergey*

This comment was removed by @fladen

*This comment was removed by @fladen*

Added subscribers: @dirky2006, @dfelinto

Added subscribers: @dirky2006, @dfelinto

Added subscriber: @brecht

Added subscriber: @brecht

This is caused by the free_blender_memory_if_possible() mechanism.

The best solution would be to sync all view cameras once, then free Blender memory and then render both views in Cycles.

This is caused by the `free_blender_memory_if_possible()` mechanism. The best solution would be to sync all view cameras once, then free Blender memory and then render both views in Cycles.
Member

Added subscriber: @Mets

Added subscriber: @Mets

Added subscribers: @PEYRONNET, @JacquesLucke

Added subscribers: @PEYRONNET, @JacquesLucke
Sergey Sharybin was unassigned by Dalai Felinto 2019-01-22 22:33:35 +01:00
Dalai Felinto self-assigned this 2019-01-22 22:33:35 +01:00

This issue was referenced by 699b49e8e9

This issue was referenced by 699b49e8e9d3f2fde5283e7c604782f83fd0c910

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
10 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#58142
No description provided.