Fix T58142:  Crash when use Cycles to render stereoscopy

Based on Brecht Van Lommel's suggestion:

"The best solution would be to sync all view cameras once, then free
Blender memory and then render both views in Cycles."

Reviewers: brecht, sergey

Maniphest Tasks: T58142

Differential Revision: https://developer.blender.org/D4239